--- a/Digital-clock/style.css
+++ b/Digital-clock/style.css
@@ -5,11 +5,14 @@
     font-size: 30px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-
+body{
+    background-color: rgb(189, 228, 207);
+}
 .clock{
     width: 300px;
-    background-color: rgb(241, 241, 129);
-    border: 2px solid black;
+    background-color: rgb(51, 246, 126);
+    border: 3px solid black;
+    border-radius: 10px;
     margin: auto;
     margin-top: 200px;
     padding: 10px;
